# SafeKeeping

./: .gitignore  CMakeLists.txt  README.md
include/safekeeping/: SafeKeeping.h
src/: FileImplStorage.h  LibSecretImplStorage.h  MacImplStorage.h  SafeKeeping.cpp  WinImplStorage.h
tests/: CMakeLists.txt  test-filestorage.cpp  test-reboot.cpp  test-vault.cpp
